--- a/package.json
+++ b/package.json
@@ -2,5 +2,23 @@
   "name": "husky-7-test",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.1",
+    "typescript": "^4.3.5"
+  },
+  "scripts": {
+    "eslint": "eslint",
+    "eslint:fix:js": "eslint -c ./.eslintrc.js --fix",
+    "eslint:fix:ts": "eslint -c ./.tslintrc.js.js --fix",
+    "test": "echo 'running tests....'",
+    "lint-staged": "lint-staged",
+    "prepare": "husky install"
+  }
 }
