--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-import": "^2.23.4",
     "husky": "^7.0.0",
     "lint-staged": "^11.1.1",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
   "scripts": {
