--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/node": "^16.4.5",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
@@ -17,9 +18,11 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
+    "start": "yarn build && node build/index.js",
+    "build": "rm -rf ./build && tsc",
     "eslint": "eslint",
     "eslint:fix:js": "eslint -c ./.eslintrc.js --fix",
-    "eslint:fix:ts": "eslint -c ./.tslintrc.js --fix",
+    "eslint:fix:ts": "eslint -c ./.eslintrc.js --fix",
     "test": "echo 'running tests....'",
     "lint-staged": "lint-staged",
     "prepare": "husky install"
