--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "start": "yarn build && node build/index.js",
-    "build": "rm -rf ./build && tsc",
+    "build": "rm -rf ./build && yarn build:ts",
+    "build:ts": "yarn eslint:fix:ts && tsc",
     "eslint": "eslint",
     "eslint:fix:js": "eslint -c ./.eslintrc.js --fix",
     "eslint:fix:ts": "eslint -c ./.eslintrc.js --fix",
