--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "scripts": {
     "start": "yarn build && node build/index.js",
-    "build": "rm -rf ./build && yarn build:ts",
-    "build:ts": "yarn eslint:fix:ts && tsc",
+    "build": "rm -rf ./build && yarn eslint:fix:ts && yarn build:ts",
+    "build:ts": "tsc",
     "eslint:fix:js": "eslint -c ./.eslintrc.js --fix",
     "eslint:fix:ts": "eslint -c ./.eslintrc.js --fix",
     "test": "echo 'running tests....'",
